Actualización del main.js

--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,7 @@ select:focus {
   }
 }
 
-/* Media Query para pantallas hasta 768px */
+/* Media Queries para pantallas hasta 768px */
 @media (max-width: 768px) {
 
   
