--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,8 @@ html,body{
 
   .header-buttons{
   position: absolute;
-  right: 2rem;       /* ajústalo si los quieres más pegados o más adentro */
-  bottom: 10px;      /* los baja hacia la línea inferior del header */
+  right: 2rem;       
+  bottom: 10px;      
   display: flex;
   gap: 1rem;
 }
@@ -92,13 +92,13 @@ html,body{
   display: none;
   position: fixed;
   inset: 0;
-  background: rgba(58,45,70,.6); /* morado con transparencia */
+  background: rgba(58,45,70,.6); 
   backdrop-filter: blur(4px);
   justify-content: center;
   align-items: center;
   z-index: 1000;
-    overflow-y: auto; /* 👈 habilita scroll en toda la pantalla */
-  padding: 2rem;    /* deja espacio alrededor si hay mucho contenido */
+  overflow-y: auto; 
+  padding: 2rem;    
 }
 
 /* Caja del modal */
@@ -111,8 +111,8 @@ html,body{
   text-align: center;
   box-shadow: var(--shadow);
   animation: fadeIn 0.3s ease;
-   max-height: 90vh;    /* 👈 limite de altura */
-  overflow-y: auto;    /* 👈 scroll solo dentro del contenido */
+   max-height: 90vh;    
+  overflow-y: auto;    
 }
 
 /* Título del modal */
@@ -236,7 +236,8 @@ html,body{
 
 /* ===== Botones ===== */
 .categorias{
-  display:flex; gap:12px; 
+  display:flex; 
+  gap:12px; 
   justify-content:center; 
   flex-wrap:wrap;
   margin-bottom:28px;
@@ -347,12 +348,15 @@ html.no-scroll, body.no-scroll { overflow: hidden; }
 }
 
 .imagenes-galeria{
-  display:grid; gap:16px;
+  display:grid; 
+  gap:16px;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
 }
 
 .imagenes-galeria img{
-  width:100%; 
+  /* width:100%; */ 
+  width: 222px;
+  height: 270px;
   border-radius:14px; 
   box-shadow:var(--shadow); 
   cursor:zoom-in;
@@ -488,26 +492,7 @@ html.no-scroll, body.no-scroll { overflow: hidden; }
 }
 
 /* ===== Footer ===== */
-/* .footer{ 
-  background:var(--lila-dark); color:#fff; 
-  padding:32px 16px; 
-}
 
-.footer-contenido{ 
-  max-width:1100px; margin:0 auto; text-align:center; 
-}
-
-.footer h3{ 
-  margin:0 0 6px; font-family:'Playfair Display', serif;
- }
-
-.footer p{ 
-  margin:0 0 6px; color:#f3e9ff; 
-}
-
-.footer small{ 
-  color:#ddd0f5; 
-} */
 
 .footer {
   background: var(--lila-dark);
@@ -665,6 +650,7 @@ html.no-scroll, body.no-scroll { overflow: hidden; }
     padding: 0.3rem 0.5rem;
   }
 }
+
 
 
 
